--- a/src/css/_rf-input.scss
+++ b/src/css/_rf-input.scss
@@ -57,7 +57,7 @@ input:focus {
     width: 100%;
     height: 40px;
     line-height: 40px;
-    ont-size: 17px;
+    font-size: 17px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     border-radius: 3px;
