--- a/src/css/_rf-label.scss
+++ b/src/css/_rf-label.scss
@@ -7,11 +7,26 @@ Version:      0.1 (Concept)
 
 
 label {
-  display: inline-block;
+  display: block;
   margin: 0px 0px 4px 0px;
   padding: 0px 0px 0px 0px;
   width: auto;
   color: #606c76;
+}
+
+label:after {
+  content: ":";
+}
+
+label[for]
+{
+    margin: 0px 10px 0px 0px;
+    oadding: 4px 0px 0px 0px;
+    display: inline-block;
+}
+
+label[for]:after {
+  content: "";
 }
 
 
@@ -24,5 +39,12 @@ label {
   label {
     width: 100%;
     margin: 10px 0px 5px 0px;
+  }
+
+  label[for]
+  {
+      float: left;
+      width: auto;
+      margin: 7px 0px 0px 5px;
   }
 }
