--- a/src/css/rf.scss
+++ b/src/css/rf.scss
@@ -17,8 +17,12 @@ Version:      0.1 (Concept)
 @import '_rf-disabled.scss';
 
 @import '_rf-input.scss';
+@import '_rf-output.scss';
+@import '_rf-range.scss';
 @import '_rf-textarea.scss';
 @import '_rf-button.scss';
 @import '_rf-checkbox.scss';
+@import '_rf-radio.scss';
 @import '_rf-select.scss';
+@import '_rf-inputlist.scss';
 @import '_rf-input.scss';
