--- a/src/css/_rf-output.scss
+++ b/src/css/_rf-output.scss
@@ -1,25 +1,27 @@
 
 
 /*
-Ellement: 	  Textarea
+Ellement: 	  Input
 Version:      0.1 (Concept)
 */
 
 
-textarea {
-  width: 100%;
-  height: 120px;
-  padding: 5px 5px 5px 5px;
-  margin: 0px 0px 0px 0px;
+output {
+  display: inline-block;
   box-sizing: border-box;
-  resize: none;
+  width: 100%;
+  height: 30px;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 5px 0px 5px;
   border: solid 1px #bbbbbb;
+  line-height: 30px;
   outline: none;
 }
 
-textarea:focus {
+output:focus {
   border: 1px solid lightblue;
 }
+
 
 
 /*
@@ -28,9 +30,10 @@ textarea:focus {
 
 @media screen and ( max-width: 568px )
 {
-  textarea {
+  output {
     width: 100%;
-    height: 120px;
+    height: 40px;
+    line-height: 40px;
     font-size: 17px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
