--- a/src/css/_rf-radio.scss
+++ b/src/css/_rf-radio.scss
@@ -6,7 +6,7 @@ Version:      0.1 (Concept)
 */
 
 
-input[type="checkbox"] {
+input[type="radio"] {
   appearance: none;
   display: inline-block;
   width: 18px;
@@ -15,11 +15,15 @@ input[type="checkbox"] {
   margin: 0px 0px 0px 0px;
 }
 
-input[type="checkbox"] + label {
+input[type="radio"]:checked {
+  border: solid 1px green;
+}
+
+input[type="radio"] + label {
   opacity: 0.7;
 }
 
-input[type="checkbox"]:checked + label {
+input[type="radio"]:checked + label {
   opacity: 1.0;
 }
 
@@ -30,7 +34,7 @@ input[type="checkbox"]:checked + label {
 
 @media screen and ( max-width: 568px )
 {
-  input[type="checkbox"] {
+  input[type="radio"] {
     display: block;
     float: left;
     clear: both;
