--- a/src/css/_rf-small.scss
+++ b/src/css/_rf-small.scss
@@ -10,10 +10,10 @@ Version:      0.1 (Concept)
 form small {
   display: block;
   margin: 0px 0px 0px 0px;
-  padding: 2px 5px 0px 0px;
+  padding: 4px 5px 0px 0px;
   clear: both;
   font-size: 80%;
-  color: #222222;
+  color: #bbbbbb;
   font-style: italic;
   text-align: right;
 }
