--- a/src/css/rf.scss
+++ b/src/css/rf.scss
@@ -17,6 +17,7 @@ Version:      0.1 (Concept)
 @import '_rf-disabled.scss';
 
 @import '_rf-input.scss';
+@import '_rf-input-file.scss';
 @import '_rf-output.scss';
 @import '_rf-range.scss';
 @import '_rf-textarea.scss';
