--- a/src/css/_rf-button.scss
+++ b/src/css/_rf-button.scss
@@ -10,7 +10,7 @@ button,
 input[type="button"],
 input[type="submit"] {
   width: auto;
-  height: 30px;
+  height: 2.2rem;
   padding: 0px 10px 0px 10px;
   background: #ffffff;
   color: #222222;
@@ -37,7 +37,7 @@ input[type="submit"] > *  {
   button,
   input[type="button"],
   input[type="submit"] {
-    height: 40px;
+    height: 2.8rem;
     line-height: 35px;
     font-size: 17px;
     -moz-border-radius: 3px;
