--- a/src/css/_rf-inputlist.scss
+++ b/src/css/_rf-inputlist.scss
@@ -9,7 +9,7 @@ Version:      0.1 (Concept)
 input[list] {
   display: block;
   width: auto;
-  height: 30px;
+  height: 2.2rem;
   padding: 0px 20px 0px 5px;
   box-sizing: border-box;
   outline: none;
@@ -54,9 +54,9 @@ input[list] > option {
 
 @media screen and ( max-width: 568px )
 {
-  select {
+  input[list] {
     width: 100%;
-    height: 40px;
+    height: 2.8rem;
     line-height: 40px;
     font-size: 17px;
     -moz-border-radius: 3px;
