--- a/src/css/_rf-range.scss
+++ b/src/css/_rf-range.scss
@@ -5,108 +5,89 @@ Ellement: 	  Input[range]
 Version:      0.1 (Concept)
 */
 
-
-// input[type="range"] {
-//   display: inline-block;
-//   box-sizing: border-box;
-//   width: 100%;
-//   height: auto;
-//   margin: 0px 0px 0px 0px;
-//   padding: 0px 0px 0px 0px;
-//   -webkit-appearance: none;
-//   -moz-appearance: none;
-//   appearance: none;
-//   border: solid 1px silver;
-// }
-
+/* BASIC */
 input[type=range] {
-  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
-  width: 100%; /* Specific width is required for Firefox. */
-  background: transparent; /* Otherwise white in Chrome */
+  -webkit-appearance: none;
+  margin: 18px 0;
+  width: 100%;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+}
+
+input[type=range]:focus {
+  outline: none;
+  border: none;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+}
+
+input[type=range]:-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 #cccccc;
+}
+
+/* WEBKIT */
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  box-shadow: none;
+  background: #ffffff;
+  border-radius: 2px;
+  border: 1px solid #bbbbbb;
 }
 
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
-}
-
-input[type=range]:focus {
-  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
-}
-
-input[type=range]::-ms-track {
-  width: 100%;
-  cursor: pointer;
-
-  /* Hides the slider so custom styles can be added */
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-
-// THUMB
-input[type=range]::-webkit-slider-thumb {
-  // -webkit-appearance: none;
-  border: 1px solid #000000;
-  height: 36px;
+  height: 16px;
   width: 16px;
-  border-radius: 3px;
-  background: green;
-  cursor: pointer;
-  margin-top: -14px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; /* Add cool effects to your sliders! */
-}
-
-/* All the same stuff for Firefox */
-input[type=range]::-moz-range-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
-  border-radius: 3px;
+  margin-top: -7px;
   background: #ffffff;
+  border: 1px solid #bbbbbb;
+  border-radius: 8px;
   cursor: pointer;
-}
-
-/* All the same stuff for IE */
-input[type=range]::-ms-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
-  border-radius: 3px;
-  background: #ffffff;
-  cursor: pointer;
-}
-
-// TRACK
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 8.4px;
-  cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3071a9;
-  border-radius: 1.3px;
-  border: 0.2px solid #010101;
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #367ebd;
+  background: lightblue;
 }
 
+/* MOZILLA */
 input[type=range]::-moz-range-track {
   width: 100%;
-  height: 8.4px;
+  height: 2px;
   cursor: pointer;
+  animate: 0.2s;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3071a9;
-  border-radius: 1.3px;
-  border: 0.2px solid #010101;
+  box-shadow: none;
+  background: #ffffff;
+  border-radius: 1px;
+  border: 1px solid #bbbbbb;
+  //border: none;
 }
 
+input[type=range]:focus::-moz-range-track {
+  background: lightblue;
+}
+
+input[type=range]::-moz-range-thumb {
+  border: 1px solid #aaaaaa;
+  height: 14px;
+  width: 14px;
+  border-radius: 8px;
+  background: #ffffff;
+  border: 1px solid #bbbbbb;
+  cursor: pointer;
+}
+
+/* MICROSOFT */
 input[type=range]::-ms-track {
   width: 100%;
   height: 8.4px;
   cursor: pointer;
+  animate: 0.2s;
   background: transparent;
   border-color: transparent;
   border-width: 16px 0;
@@ -120,15 +101,25 @@ input[type=range]::-ms-fill-lower {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
 
-input[type=range]:focus::-ms-fill-lower {
-  background: #3071a9;
-}
-
 input[type=range]::-ms-fill-upper {
   background: #3071a9;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+
+input[type=range]::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+
+input[type=range]:focus::-ms-fill-lower {
+  background: #3071a9;
 }
 
 input[type=range]:focus::-ms-fill-upper {
