--- a/src/css/_rf-textarea.scss
+++ b/src/css/_rf-textarea.scss
@@ -8,13 +8,17 @@ Version:      0.1 (Concept)
 
 textarea {
   width: 100%;
-  height: 120px;
+  height: 8rem;
   padding: 5px 5px 5px 5px;
   margin: 0px 0px 0px 0px;
   box-sizing: border-box;
   resize: none;
   border: solid 1px #bbbbbb;
   outline: none;
+
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
 }
 
 textarea:focus {
